Mulish font fix

--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -26,7 +26,7 @@
         h4{
             font-size: 26px;
             color: #3B3B3B;
-            font-family: Mulish;
+            font-family: 'Mulish';
             span{
                 color: #C3343C;  
             }
@@ -65,7 +65,7 @@
             font-size: 20px;
             color: #3B3B3B;
             padding-top: 10px;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }   
 .design-layout{
             background-color: #ebebeb;
@@ -83,7 +83,7 @@
                 cursor: pointer;
                 font-size: 20px;
                 padding: 10px 20px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 &:hover{
                     background-color: #C3343C;
                     color: #FFFFFF;
@@ -152,7 +152,7 @@
                         cursor: pointer;
                         font-size: 20px;
                         padding: 10px 20px;
-                        font-family: Mulish;
+                        font-family: 'Mulish';
                         &:hover{
                             background-color: #C3343C;
                             color: #FFFFFF;
@@ -282,7 +282,7 @@
                     cursor: pointer;
                     font-size: 20px;
                     padding: 10px 20px;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                     &:hover{
                         background-color: #C3343C;
                         color: #FFFFFF;
@@ -304,7 +304,7 @@
                     font-size: 18px;
                     color: #707071;
                     font-weight: 400;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                 }
             }
             @include media-breakpoint-down(lg) {  
@@ -476,7 +476,7 @@
                 h6{
                     font-size: 20px;
                     color: #FCFCFC;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                 }
                 .button{
                     margin-top: 60px;
@@ -490,7 +490,7 @@
                     font-size: 20px;
                     padding: 10px 20px;
                     border-radius: 0px;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                 }
             }
             @include media-breakpoint-down(lg) { 
