--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -30,7 +30,7 @@
             font-size: 36px;
             font-weight: 400;
             color: #FFF;
-            font-family: Mulish;
+            font-family: 'Mulish';
             a{
                 color: #3B3B3B;
                 text-decoration: underline;
@@ -88,7 +88,7 @@
             font-weight: 300;
             margin-bottom: 60px;
             line-height: 40px;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
         .btn{
             font-size: 20px;
@@ -96,7 +96,7 @@
             background-color: #FFF;
             color: #5277BA;
             border-radius: 0;
-            font-family: Mulish;
+            font-family: 'Mulish';
             img{
                 padding-left: 15px;
             }
@@ -179,7 +179,7 @@
                     font-size: 18px;
                     color: #ffffff;
                     padding-top: 10px;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                 }
                 .li{
                     font-size: 20px;
@@ -213,7 +213,7 @@
             color: #707071;
             margin-bottom: 60px;
             line-height: 35px;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
         .nav-link{
             color: #282829;
@@ -299,7 +299,7 @@
                     font-size: 18px;
                     color: #282829;
                     padding-top: 10px;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                 }
                 .li{
                     font-size: 20px;
