--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -23,12 +23,12 @@
        }
        h2{
         font-size: 82px;
-        font-family: Mulish;
+        font-family: 'Mulish';
         color: #C3343C;
     }
     h5{
         font-size: 24px;
-        font-family: Mulish;
+        font-family: 'Mulish';
         color: #3B3B3B;
         line-height: 36px;
         padding-top: 35px;
@@ -128,7 +128,7 @@
             p{
                 color: #030303;
                 font-size: 18px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 font-weight: 100;
             }
             .outline-btn{
@@ -137,7 +137,7 @@
                 padding: 10px 20px;
                 margin: 40px 0px;
                 font-size: 18px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 &:hover{
                     background-color: #C3343C;
                     color: #FFFFFF;
@@ -166,7 +166,7 @@
             p{
                 color: #000000;
                 font-size: 18px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 font-weight: 100;
             }
             .outline-btn{
@@ -175,7 +175,7 @@
                 padding: 10px 20px;
                 margin: 40px 0px;
                 font-size: 18px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 &:hover{
                     background-color: #C3343C;
                     color: #FFFFFF;
