--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -22,7 +22,7 @@
     p{
         font-size: 18px;
         color: #707071;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     .banner-content{
         padding-top: 200px;
@@ -120,7 +120,7 @@
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
-        font-family: Mulish;
+        font-family: 'Mulish';
         line-height: 40px;
     }
     .list{
@@ -132,7 +132,7 @@
             font-size: 20px;
             margin-left: 20px;
             font-weight: 200;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
     }
     @include media-breakpoint-down(lg){
@@ -220,13 +220,13 @@
         line-height: 30px;
         margin-top: 40px;
         margin-left: 10px;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     .li{
         font-size: 16px;
         margin-top: 6px;
         margin-left: 10px;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     @include media-breakpoint-down(md){
         padding: 75px 0px;
@@ -383,7 +383,7 @@
                }
            }
            h4{
-            font-family: Mulish;
+            font-family: 'Mulish';
             font-size: 20px;
                margin: 0 0 10px 40px;
            }
@@ -438,7 +438,7 @@ box-shadow: none !important;
     color: #0D0D0D;
     cursor: pointer;
     font-size: 20px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     padding: 10px 15px;
     &:hover{
         background-color: #C3343C;
