--- a/src/app/modules/work/components/marketing/marketing.component.scss
+++ b/src/app/modules/work/components/marketing/marketing.component.scss
@@ -12,7 +12,7 @@ h2{
 }
 p{
     font-size: 18px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -20,7 +20,7 @@ p{
 }
 h6{
     font-size: 24px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -42,7 +42,7 @@ h6{
             font-weight: 300;
             font-size: 24px;
             margin-top: 40px;
-            font-family: Mulish;
+            font-family: 'Mulish';
 
         }
         @include media-breakpoint-down(lg){
@@ -127,7 +127,7 @@ h6{
             font-size: 20px;
             padding: 10px 20px;
             border-radius: 0px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             cursor: pointer;
             &:hover{
                 background-color: #FFFFFF;
@@ -151,7 +151,7 @@ h6{
         padding: 200px 0px;
         p{
             font-size: 18px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             line-height: 40px;
         }
         @include media-breakpoint-down(lg){
@@ -181,7 +181,7 @@ h6{
         }
         p{
              font-size: 18px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             line-height: 35px;
         }
         @include media-breakpoint-down(lg){
@@ -220,7 +220,7 @@ h6{
         }
         p{
             font-size: 18px;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
         .needs{
             height: 500px;
@@ -267,7 +267,7 @@ h6{
             font-size: 36px;
         }
         p{
-            font-family: Mulish;
+            font-family: 'Mulish';
             font-size: 18px;
             line-height: 40px;
         }
@@ -369,7 +369,7 @@ h6{
                    }
                }
                h4{
-                font-family: Mulish;
+                font-family: 'Mulish';
                 font-size: 20px;
                    margin: 0 0 10px 40px;
                }
@@ -434,7 +434,7 @@ h6{
         color: #0D0D0D;
         cursor: pointer;
         font-size: 20px;
-        font-family: Mulish;
+        font-family: 'Mulish';
         &:hover{
             background-color: #C3343C;
             color: #FFFFFF;
