--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,14 +48,14 @@ header{
   margin-top: 8px;
     }
 h2{
-font-family: Mulish;
+font-family: 'Mulish';
 font-size: 14px;
 color: #000000;
 margin-left: -10px;
 padding-top: 5px;
 }
 .nav-link{
-    font-family: Mulish;
+    font-family: 'Mulish';
     font-size: 16px;
     color: #505050;
     font-weight: 400;
@@ -189,7 +189,7 @@ footer{
         a{
             font-size: 14px;
             color: #707070;
-           font-family: Mulish;
+           font-family: 'Mulish';
         }
         span{
             color: #707070;
