--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -19,7 +19,7 @@
             font-size: 26px;
             color: #707071;
             padding-top: 25px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             a{
                 color: #C3343C;
                 text-decoration: underline;
@@ -89,7 +89,7 @@
                           }
                         h6{
                             color: #707071;
-                            font-family: Mulish;
+                            font-family: 'Mulish';
                             font-size: 16px;
                         }
                         img{
@@ -142,7 +142,7 @@
             cursor: pointer;
             padding: 10px 20px;
             border-radius: 0px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             &:hover{
                 background-color: #FFFFFF;
                 color: #C3343C;
