--- a/src/app/components/career/career.component.scss
+++ b/src/app/components/career/career.component.scss
@@ -22,7 +22,7 @@
             font-size: 26px;
             color: #3B3B3B;
             padding-top: 25px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             span a{
                 color: #C3343C;
                 text-decoration: underline;
@@ -63,18 +63,18 @@
                 font-size: 24px;
                 font-weight: 500;
                 cursor: pointer;
-                font-family: Mulish;
+                font-family: 'Mulish';
             }
             h6{
                 font-size: 20px;
                 padding-top: 5px;
                 font-weight: 400;
                 color: #707071;
-                font-family: Mulish;
+                font-family: 'Mulish';
             }
             h5{
                 font-size: 20px; 
-                font-family: Mulish;
+                font-family: 'Mulish';
                 font-weight: 400;
             }
             .button{
@@ -87,7 +87,7 @@
                 cursor: pointer;
                 font-size: 20px;
                 padding: 5px 20px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 &:hover{
                     background-color: #C3343C;
                     color: #FFFFFF;
