--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -27,7 +27,7 @@
             font-size: 36px;
             padding-top: 25px;
             color: #3B3B3B;
-            font-family: Mulish;
+            font-family: 'Mulish';
              span{
                 color: #FFFFFF;
                 //border-bottom: 2px solid #FFF;
@@ -166,7 +166,7 @@
         p{
             font-size: 18px;
             color: #FFFFFF;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
         h2{
             font-size: 48px;
@@ -186,7 +186,7 @@
           p{
             font-size: 18px;
             color: #FFFFFF;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
     }
     .mt-2, .my-2 {
