--- a/src/app/modules/career/components/job-apply/job-apply.component.scss
+++ b/src/app/modules/career/components/job-apply/job-apply.component.scss
@@ -21,7 +21,7 @@
             font-size: 26px;
             color: #3B3B3B;
             padding-top: 25px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             span a{
                 color: #C3343C;
                 text-decoration: underline;
@@ -57,7 +57,7 @@
                 color: #0D0D0D;
                 cursor: pointer;
                 font-size: 20px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 padding: 8px 25px;
                 &:hover{
                     background-color: #C3343C;
@@ -81,7 +81,7 @@
             h6{
                 font-size: 18px;
                 padding-top: 20px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 color: #464646;
                 padding-left: 20px;
             }
@@ -90,13 +90,13 @@
                     font-size: 18px;
                     font-weight: 400;
                     color: #464646;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                 }
             }
             h5{
                 font-size: 18px;
                 padding-top: 5px;
-                font-family: Mulish;
+                font-family: 'Mulish';
                 color: #464646;
             }
             mat-form-field{
@@ -119,7 +119,7 @@
                     color: #0D0D0D;
                     cursor: pointer;
                     font-size: 20px;
-                    font-family: Mulish;
+                    font-family: 'Mulish';
                     padding: 8px 25px;
                     &:hover{
                         background-color: #C3343C;
