--- a/src/app/modules/services/components/interface-design/interface-design.component.scss
+++ b/src/app/modules/services/components/interface-design/interface-design.component.scss
@@ -22,7 +22,7 @@
     p{
         font-size: 18px;
         color: #707071;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     @include media-breakpoint-down(lg){
         .row{
@@ -110,7 +110,7 @@
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     .list{
         padding: 30px;
@@ -118,7 +118,7 @@
             font-size: 20px;
             margin-left: 5px;
             font-weight: 200;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
     }
     @include media-breakpoint-down(lg){
@@ -191,7 +191,7 @@
     p{
          font-size: 18px;
         line-height: 40px;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     h3{
         font-size: 36px;
@@ -234,7 +234,7 @@
         line-height: 30px;
         margin-top: 40px;
         margin-left: 10px;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     .li{
         font-size: 16px;
@@ -393,7 +393,7 @@
                }
            }
            h4{
-            font-family: Mulish;
+            font-family: 'Mulish';
             font-size: 20px;
                margin: 0 0 10px 40px;
            }
@@ -448,7 +448,7 @@ box-shadow: none !important;
     color: #0D0D0D;
     cursor: pointer;
     font-size: 20px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     padding: 10px 15px;
     &:hover{
         background-color: #C3343C;
