--- a/src/app/modules/services/components/usability-testing/usability-testing.component.scss
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.scss
@@ -23,7 +23,7 @@
     p{
         font-size: 18px;
         color: #707071;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     .banner-content{
         padding-top: 200px;
@@ -215,7 +215,7 @@
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
-        font-family: Mulish;
+        font-family: 'Mulish';
         line-height: 40px;
     }
     .list{
@@ -224,7 +224,7 @@
             font-size: 20px;
             margin-left: 5px;
             font-weight: 200;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
     }
 
@@ -313,7 +313,7 @@
         font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
-        font-family: Mulish;
+        font-family: 'Mulish';
     }
     .li{
         font-size: 16px;
@@ -447,7 +447,7 @@
           margin-left: 8%;
            p{
                font-size: 16px;
-               font-family: Mulish;
+               font-family: 'Mulish';
            }
        }
     }
@@ -523,7 +523,7 @@
     p{
         font-size: 18px;
         line-height: 40px;
-        font-family: Mulish;
+        font-family: 'Mulish';
         margin-left: 35px;
     }
     @include media-breakpoint-down(lg){
@@ -538,7 +538,7 @@
 }
 
 ::ng-deep .tab-content > .active{
-    font-family: Mulish;
+    font-family: 'Mulish';
 }
 
 .services-scroll{
@@ -598,7 +598,7 @@
                }
            }
            h4{
-            font-family: Mulish;
+            font-family: 'Mulish';
             font-size: 20px;
                margin: 0 0 10px 40px;
            }
@@ -653,7 +653,7 @@ box-shadow: none !important;
     color: #0D0D0D;
     cursor: pointer;
     font-size: 20px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     padding: 10px 15px;
     &:hover{
         background-color: #C3343C;
