--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
@@ -12,7 +12,7 @@ h2{
 }
 p{
     font-size: 18px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -20,7 +20,7 @@ p{
 }
 h6{
     font-size: 24px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -121,7 +121,7 @@ h6{
         }
         p{
              font-size: 18px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             line-height: 35px;
         }
         @include media-breakpoint-down(lg){
@@ -161,7 +161,7 @@ h6{
         p{
             font-size: 18px;
             line-height: 40px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             padding-left: 85px;
             padding-top: 25px;
         }
@@ -218,7 +218,7 @@ h6{
             color: #FCFCFC;
              font-size: 18px;
             border-radius: 0px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             padding: 10px 20px;
             cursor: pointer;
             &:hover{
@@ -263,7 +263,7 @@ h6{
             color: #0D0D0D;
             cursor: pointer;
              font-size: 18px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             &:hover{
                 background-color: #C3343C;
                 color: #FFFFFF;
@@ -301,7 +301,7 @@ h6{
                    }
             }
             h4{
-             font-family: Mulish;
+             font-family: 'Mulish';
               font-size: 18px;
                 margin: 0 0 10px 40px;
             }
