--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -12,7 +12,7 @@ h2{
 }
 p{
     font-size: 18px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -20,7 +20,7 @@ p{
 }
 h6{
     font-size: 24px;
-    font-family: Mulish;
+    font-family: 'Mulish';
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -128,7 +128,7 @@ h6{
         padding: 200px 0px;
         p{
             font-size: 18px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             line-height: 50px;
         }
         @include media-breakpoint-down(lg){
@@ -172,7 +172,7 @@ h6{
         }
         p{
             font-size: 18px;
-           font-family: Mulish;
+           font-family: 'Mulish';
            line-height: 35px;
        }
        @include media-breakpoint-down(lg){
@@ -199,7 +199,7 @@ h6{
             font-family: Baskerville;
         }
         p{
-            font-family: Mulish;
+            font-family: 'Mulish';
             font-size: 18px;
             line-height: 40px;
         }
@@ -229,11 +229,11 @@ h6{
         }
         h5{
             font-size: 20px;
-            font-family: Mulish;
+            font-family: 'Mulish';
         }
         P{
              font-size: 18px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             line-height: 35px;
         }
         img{
@@ -311,7 +311,7 @@ h6{
             color: #FCFCFC;
              font-size: 18px;
             border-radius: 0px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             padding: 10px 20px;
             cursor: pointer;
             &:hover{
@@ -356,7 +356,7 @@ h6{
             color: #0D0D0D;
             cursor: pointer;
             font-size: 20px;
-            font-family: Mulish;
+            font-family: 'Mulish';
             padding: 10px 15px;
             &:hover{
                 background-color: #C3343C;
@@ -395,7 +395,7 @@ h6{
                    }
             }
             h4{
-             font-family: Mulish;
+             font-family: 'Mulish';
              font-size: 20px;
                 margin: 0 0 10px 40px;
             }
