--- a/src/app/components/career/career.component.scss
+++ b/src/app/components/career/career.component.scss
@@ -6,7 +6,7 @@
 }
 .career{
     .banner{
-        background-color: #D3B1FF;
+        background-color: #DBEEF4;
         padding-top: 140px;
         height: 700px;
         padding: 250px 0px;
