--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -2,9 +2,12 @@
     <div class="layout">
         <div class="container">
           <div class="row">
-            <div class="col-md-12">
-              <h1>Enhance your product with<span id="nextline">the right strategy</span></h1>
+            <div class="col-md-7 ordertwo">
+              <h1>Enhance your product with<span>the right strategy</span></h1>
               <h3><a routerLink="/contact-us">let us know</a> what you are looking for</h3>
+            </div>
+            <div class="col-md-5 orderone">
+             <img src="/assets/images/Mobile Service.png">
             </div>
           </div>
         </div>
