--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -2,8 +2,15 @@
    <div class="about">
       <div class="container">
          <div class="design">
-            <h1>There is always a better way <br> to do it & <span>we find it</span> </h1>
-            <h4>- by Thomas Alva Edison +<span> uxmint</span> </h4>
+            <div class="row">
+               <div class="col-md-6">
+                  <h1>There is always a better way to do it & <span>we find it</span> </h1>
+                  <h4>- by Thomas Alva Edison +<span> uxmint</span> </h4>
+               </div>
+               <div class="col-md-6 only-web">
+                  <img src="/assets/images/about.png">
+               </div>
+            </div>
          </div>
       </div>
    </div>
