--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -9,11 +9,16 @@
         background-color: #5277BA;
         padding-top: 140px;
         height: 700px;
-        padding: 250px 0px;
+        padding: 200px 0px;       
+        img{
+            width: 100%;
+            opacity: 0.5;
+        }
         h1{
             font-size: 60px;
             font-weight: 400;
             color: #FFF;
+            padding-top: 50px;
             font-family: Baskerville;
             span{
                 font-size: 60px;
@@ -50,6 +55,7 @@
             height: 615px;
             h1{
                 font-size: 36px;
+                padding-top: 10px;
                 span{
                     font-size: 36px;
                     margin-left: 10px;
@@ -65,6 +71,7 @@
         }
         @include media-breakpoint-down(sm){
             height: 690px;
+            padding: 100px 0px;
         }
     }
     .types{
@@ -126,7 +133,9 @@
     }
 
     @include media-breakpoint-down(sm) {
-
+        // .layout{
+        //     // background-image: url('/assets/images/Mobile Service.png');
+        // }
         .types-responsive{
             margin-top: 0px;
             display: block;
@@ -227,10 +236,6 @@
             text-decoration: underline;
             text-decoration-thickness: 20%;
             text-underline-offset: 8px;
-            // border-bottom: 5px solid grey;
-            // border-radius: 0px;
-            // width: 45%;
-            // padding: 0px 0px;
         }
         @include media-breakpoint-down(lg){
             padding: 100px 0;
