--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -108,7 +108,7 @@
                     <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint" target="_blank">Medium</a>
+                    <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint" target="_blank">Medium</a> <span>|</span> <a href="https://www.instagram.com/uxmint.design/" target="_blank">Instagram</a>
                 </li>
                 <!-- <li>
                     <a href="https://medium.com/uxmint">Medium</a>
