--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -8,7 +8,7 @@
                   <h4>- by Thomas Alva Edison +<span> uxmint</span> </h4>
                </div>
                <div class="col-md-6 only-web">
-                  <img src="/assets/images/about.png">
+                  <lottie-player class="animations" src="https://assets1.lottiefiles.com/private_files/lf30_dzpp6uco.json"  background="transparent"  speed="1"  autoplay style="width: 700px"></lottie-player>
                </div>
             </div>
          </div>
@@ -20,9 +20,10 @@
             <div class="design-left">
                <h2> We have created <br> products that are <br> loved by users and <br> product owners</h2>
                <h6>If you want your product to be <br> loved by its users ?</h6>
-               <div class="button">
-                  <div class="btn" routerLink="/contact-us">Let us Know</div>
-              </div>
+               <div class="anime-button">
+                  <a   routerLink="/contact-us">Let us Know</a>
+               </div>
+              
             </div>
             </div>
          <div class="col-md-6 design-layouts">
@@ -89,10 +90,10 @@
             <div class="col-md-5 design-layout">
               <div class="design-left">
                <h2>We have built & are building some great products together</h2>
-               <div class="button">
-                 <div class="btn btnn" routerLink="/services">Check our Service</div>
-              </div>
-              </div>
+               <div class="anime-button">
+                  <a   routerLink="/services">Check our Service</a>
+               </div>
+             </div>
             </div>
           <div class="col-md-7 design-layouts">
                <div class="design-right">
@@ -129,10 +130,11 @@
          <div class="design">
             <h2>We are a mix of Designers, Artists, <br> Psychologists, Programmers, Engineers, <br> Architects & more. </h2>
             <h6>We've come together to build great Products and Services. Drop in <br> your detail if you want to be a part of us.</h6>
-            <div class="button">
-               <div class="btn btn-white" routerLink="/contact-us">Join our Team</div>
-            </div>
-         </div>
+            
+            <div class="anime-button-white lets-talk">
+               <a  class="swipe-button" routerLink="/contact-us">Join our Team</a>
+             </div>
+           </div>
       </div>
    </div>
 </div>
