--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
          <h2>We design and bring</h2>
          <h1>Digital Transformation</h1>
          <p>UX Consulting. &nbsp;&nbsp;Usability Testing. &nbsp;&nbsp;User Interface Design. &nbsp;&nbsp;Front End Development.</p>
+         <lottie-player class="animations" src="https://assets8.lottiefiles.com/private_files/lf30_fr3o8i90.json"  background="transparent"  speed="1"  autoplay ></lottie-player>
       </div>
    </div>
    <div class="feature-work">
@@ -14,10 +15,14 @@
                   <h3>Feature Work</h3>
                   <h2>Digital Transformation for Telcom</h2>
                   <h4>UX . UI . Mobile . B2B</h4>
-                  <div class="buttons">
-                     <div class="btn" routerLink="/work/networking">Case Study</div>
+             
+                  <div class="anime-button">
+                     <a   routerLink="/work/networking">Case Study</a>
                   </div>
                </div>
+               
+                 
+              
             </div>
             <div class="col-md-6 step-image">
                <div class="image">
@@ -35,18 +40,24 @@
             </div>
             <div class="col-md-3"></div>
          </div>
-         <div class="row">
-            <div class="col-md-7">
+         <div class="row swipe-right">
+            <div class="col-md-7 ">
                <p>We’ve created and collaborated on to build lots of great products like Information portals, Enterprise applications, Digital transformation, Mobile apps, Product Developments & more...</p>
+              
+                <div class="anime-button">
+                  <a  class="get-to-know" routerLink="about-us">Get to know us</a>
+               </div>
             </div>
             <div class="col-md-5"></div>
          </div>
-         <div class="button">
-            <div class="btn" routerLink="about-us">Get to know us</div>
-         </div>
-      </div>
+    </div>
+ 
    </div>
-   <div class="custom-slider-main">
+
+<!-- ************* SLIDER ***************** -->
+
+   <div class="custom-slider-main ">
+      <div class="marquee-content">
       <div class="icon">
          <img src="./assets/images/home/logo2.svg">
       </div>
@@ -64,8 +75,18 @@
       </div>
       <div class="icon">
          <img src="./assets/images/home/logo1.svg">
-      </div>
+      </div>  
    </div>
+   </div>
+
+   <!-- ************* SLIDER ***************** -->
+  
+
+
+    <!-- ************* SLIDER ***************** -->
+
+
+
    <div class="cater">
       <div class="container">
          <div class="row">
@@ -74,8 +95,8 @@
             </div>
          </div>
          <div class="row left justify-content-md-center">
-            <div class="col-md-3" routerLink="services">
-               <div class="row types">
+            <div class="col-md-3 " routerLink="services">
+               <div class="row types services-shadow">
                   <div class="col-md-3">
                      <div class="icon">
                         <svg id="savedSVGExport0" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
@@ -103,13 +124,13 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
                      </div>
                   </div>
                </div>
             </div>
-            <div class="col-md-3" routerLink="services">
-               <div class="row types">
+            <div class="col-md-3 " routerLink="services">
+               <div class="row types services-shadow">
                   <div class="col-md-3">
                      <div class="icon">
                         <svg id="savedSVGExport1" xmlns="http://www.w3.org/2000/svg" width="48" height="48.27" viewBox="0 0 48 48.27">
@@ -128,13 +149,13 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
                      </div>
                   </div>
                </div>
             </div>
-            <div class="col-md-3" routerLink="services">
-               <div class="row types">
+            <div class="col-md-3 " routerLink="services">
+               <div class="row types services-shadow">
                   <div class="col-md-3">
                      <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="48.414" height="48.3" viewBox="0 0 48.414 48.3">
@@ -155,15 +176,15 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
                      </div>
                   </div>
                </div>
             </div>
          </div>
          <div class="row left justify-content-md-center">
-            <div class="col-md-3" routerLink="services">
-               <div class="row types">
+            <div class="col-md-3 " routerLink="services">
+               <div class="row types services-shadow">
                   <div class="col-md-3">
                      <div class="icon">
                         <svg id="Group_6735" data-name="Group 6735" xmlns="http://www.w3.org/2000/svg" width="48" height="48.3" viewBox="0 0 48 48.3">
@@ -184,13 +205,13 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png"routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png"routerLink="services">
                      </div>
                   </div>
                </div>
             </div>
-            <div class="col-md-3" routerLink="services">
-               <div class="row types">
+            <div class="col-md-3 " routerLink="services">
+               <div class="row types services-shadow">
                   <div class="col-md-3">
                      <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48.301" viewBox="0 0 48 48.301">
@@ -211,13 +232,13 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
                      </div>
                   </div>
                </div>
             </div>
-            <div class="col-md-3" routerLink="services">
-               <div class="row types">
+            <div class="col-md-3 " routerLink="services">
+               <div class="row types services-shadow">
                   <div class="col-md-3">
                      <div class="icon">
                         <svg id="Group_6736" data-name="Group 6736" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
@@ -239,14 +260,15 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime"  src="./assets/images/home/arrow.png" routerLink="services">
                      </div>
                   </div>
                </div>
             </div>
          </div>
-         <div class="button">
-            <div class="btn" routerLink="services">View All</div>
+        
+         <div class="anime-button">
+            <a  class="swipe-button" routerLink="services">View All</a>
          </div>
       </div>
    </div>
@@ -370,9 +392,8 @@
                   <p>Mobile Applications</p>
                </div>
             </div>
-            <div class="button">
-               <div class="btn" routerLink="services">View All</div>
-            </div>
+           
+           
          </div>
       </div>
    </div>
@@ -380,16 +401,16 @@
       <div class="row">
          <div class="col-md-6 left">
             <h2>MINTify your thoughts with our latest blogs and articles</h2>
-            <div class="button">
-               <div class="btn btnn" routerLink="blogs">Read Blog</div>
-            </div>
+             <div class="anime-button">
+                  <a  class="swipe-button" routerLink="blogs">Read Blog</a>
+                </div>
          </div>
          <div class="col-md-6 right">
             <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
             <ngu-tile *nguCarouselDef="let item; let i = index">
                <div class="class">
                   <div class="image">
-                     <img [src]="item.img">
+                     <img class="img-anime" [src]="item.img">
                   </div>
                   <h3><a [href]="item.url" target="_blank">{{ item.title }}</a></h3>
                   <h4>{{ item.sub }}</h4>
@@ -410,9 +431,10 @@
             <div class="col-md-4">
                <h2>Let's craft <br>design together!</h2>
             </div>
-            <div class="button">
-               <div class="btn-white" routerLink="contact-us">Let's Talk</div>
-            </div>
+             <div class="anime-button-white lets-talk">
+                  <a  class="swipe-button" routerLink="contact-us">Let's Talk</a>
+                </div>
+           
          </div>
       </div>
    </div>
