--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -3,11 +3,11 @@
         <div class="container">
           <div class="row">
             <div class="col-md-7 ordertwo">
-              <h1>Enhance your product with<span>the right strategy</span></h1>
+              <h1>Enhance your product with<span> the right strategy</span></h1>
               <h3><a routerLink="/contact-us">let us know</a> what you are looking for</h3>
             </div>
             <div class="col-md-5 orderone">
-             <img src="/assets/images/Mobile Service.png">
+              <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_yezzncyy.json"  background="transparent"  speed="1"  autoplay ></lottie-player>
             </div>
           </div>
         </div>
@@ -22,9 +22,10 @@
                       <h2>User Experience</h2>
                       <p>Unravelling solutions for business problems in alignment with end-user expectations. 
                           Creating functional, Usable, Pleasurable Unique and Value for digital products.</p>
-                      <div class="button">
-                          <div class="btn" routerLink="/service/user-experience">See More </div>
-                      </div>
+                          <div class="anime-button-blue lets-talk">
+                            <a  class="swipe-button" routerLink="/service/user-experience">See More</a>
+                          </div>
+                    
                     </ng-template>
                   </li>
                   <li ngbNavItem="interface-design">
@@ -33,9 +34,10 @@
                     <h2>Interface Design</h2>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the 
                           landing page. Make your website come alive with best UI.</p>
-                      <div class="button">
-                        <div class="btn" routerLink="/service/interface-design">See More</div>
-                    </div>
+                          <div class="anime-button-blue lets-talk">
+                            <a  class="swipe-button" routerLink="/service/interface-design">See More</a>
+                          </div>
+                     
                     </ng-template>
                   </li>
                   <li ngbNavItem="ui-development">
@@ -44,10 +46,10 @@
                       <h2>UI Development</h2>
                       <p>The design comes to life when the robust technologies are put in place to experience 
                           the best.</p>
-                      <div class="button">
-                        <div class="btn" routerLink="/service/ui-development">See More</div>
-                    </div>
-                    </ng-template>
+                          <div class="anime-button-blue lets-talk">
+                            <a  class="swipe-button" routerLink="/service/ui-development">See More</a>
+                          </div>
+                     </ng-template>
                   </li>
                   <li ngbNavItem="end-to-end-development">
                     <a ngbNavLink>End To End Development</a>
@@ -55,9 +57,10 @@
                         <h2>End To End Development</h2>
                         <p>Designing scalable platform harnessing the technology for business reach to their end 
                             users with the better user experience, engagement and adaptablity.</p>
-                        <div class="button">
-                            <div class="btn" routerLink="/service/end-to-end-development">See More</div>
-                        </div>
+                            <div class="anime-button-blue lets-talk">
+                              <a  class="swipe-button" routerLink="/service/end-to-end-development">See More</a>
+                            </div>
+                        
                     </ng-template>
                   </li>
                   <li ngbNavItem="usability-testing">
@@ -66,9 +69,12 @@
                         <h2>Usability Testing</h2>
                         <p>Best of the designs, is the design that evolves and adapts as per user’s mental model. 
                             It helps the business to evaluates the product or website before it is launched.</p>
-                        <div class="button">
+                            <div class="anime-button-blue lets-talk">
+                              <a  class="swipe-button" routerLink="/service/usability-testing">See More</a>
+                            </div>
+                        <!-- <div class="button">
                             <div class="btn" routerLink="/service/usability-testing">See More</div>
-                        </div>
+                        </div> -->
                     </ng-template>
                   </li>
                 </ul>
