--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,24 +13,24 @@
                 <h2 routerLink="/">DESIGN<br>CONSULTING</h2>
                 </div>
             </div>
-            <div class="collapse navbar-collapse">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item web-only">
-                  <a class="nav-link" routerLinkActive="active" routerLink="/works">Work</a>
+            <div class="collapse navbar-collapse ">
+              <ul class="navbar-nav ml-auto ">
+                <li class="nav-item web-only snip1189">
+                  <a class="nav-link " routerLinkActive="active" routerLink="/works"><span>Work</span></a>
                 </li>
-                <li class="nav-item web-only">
+                <li class="nav-item web-only snip1189">
                     <a class="nav-link" routerLinkActive="active" routerLink="/about-us">About</a>
                 </li>
-                <li class="nav-item web-only">
+                <li class="nav-item web-only snip1189">
                   <a class="nav-link" routerLinkActive="active" routerLink="/services">Services</a>
                 </li>
-                <li class="nav-item web-only">
+                <li class="nav-item web-only snip1189">
                     <a class="nav-link" routerLinkActive="active" routerLink="/contact-us">Let's Talk</a>
                 </li>
-                <div class="col-md-1 only-mobile">
+                <div class="col-md-1 only-mobile snip1189">
                     <div class="lines"></div>
                 </div>
-                <li class="nav-item">
+                <li class="nav-item menu">
                     <a class="nav-link menu-activator" (click)="openMenu()"> <img src="./assets/images/menu.png"></a>
                 </li>
               </ul>
@@ -110,12 +110,18 @@
                 <li>
                     <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint" target="_blank">Medium</a>
                 </li>
+               
+                
                 <!-- <li>
                     <a href="https://medium.com/uxmint">Medium</a>
                 </li> -->
             </ul> 
+       
+             
+             
           
         </div>
+    
     </div>
     <hr class="footer">
     <div class="footer-bottom">
