--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,12 +1,19 @@
 <div class="contact">
-   <div class="banner">
-      <div class="container">
-         <div class="contact-layout">
-            <h1>We are eager to <span> get in touch </span><br> with you as well </h1>
+<div class="banner">
+   <div class="container">
+      <div class="contact-layout">    
+         <div class="row">
+         <div class="col-md-6 contact-left">
+            <h1>We are eager to <span> get in touch </span> with you as well </h1>
             <h6>you can drop us an email at <span> <a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h6>
+         </div>
+         <div class="col-md-6 only-web">
+            <lottie-player class="animations" src="https://assets5.lottiefiles.com/private_files/lf30_kn4foydy.json"  background="transparent"  speed="1"  autoplay style="width: 595px; height: 700px;"></lottie-player>
+         </div>
          </div>
       </div>
    </div>
+</div>
    <div class="contact-layout1">
       <div class="row">
          <div class="container">
@@ -66,9 +73,9 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="button">
-                     <div class="btn btnn" (click)="submit()">Submit</div>
-                  </div>
+                  <div class="anime-button lets-talk">
+                     <a  class="swipe-button" (click)="submit()">Submit</a>
+                   </div>
                </div>
             </form>
          </div>
