--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -6,9 +6,8 @@
 }
 .banner{
     background-color: #FFD855;
-    padding-top: 140px;
     height: 700px;
-    padding: 200px 0px;
+    padding: 0px 0px;
     .contact-layout{
     h1{
         font-size: 56px;
@@ -45,10 +44,22 @@
             font-size: 24px;
         }
     }
+    .only-web{
+        display: none;
+    }
+    .contact-left{
+        padding: 0px 10px;
+    }
 }
   @include media-breakpoint-down(sm) {
         height: 500px;
         padding: 150px 0px;
+        .only-web{
+            display: none;
+        }
+        .contact-left{
+            padding: 0px 10px;
+        }
     }
 }
 .contact-layout1{
@@ -374,3 +385,56 @@ iframe {
     font-weight: 400;
     font-family: 'Muli', sans-serif;
   }
+  .contact-left{
+      padding: 245px 0px;
+  }
+
+
+
+// *********************** BUTTONS red ***************
+.anime-button{
+    display: flex;
+    margin-left: 14px;
+    margin-top: -20px;
+
+    a{
+        border: 2px solid #0D0D0D;
+        border-radius: 0;
+        color: #0D0D0D;
+        cursor: pointer;
+        font-size: 20px;
+        padding: 10px 20px;
+        font-family: "Muli", sans-serif;
+        margin-top: 30px;
+        position: relative;
+        transition:all 1.5s;
+        z-index: 1;
+        text-decoration: none;
+        overflow:hidden;
+    }
+    a::before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
+        background-color: #C3343C;
+        transition:all 1.5s;
+        transform: translateX(-100%);
+        z-index: -1;
+        overflow:hidden;
+       
+    
+    }
+    a:hover:before{
+        transform: translateX(0);
+    }
+    a:hover{
+        color: #fff;
+        border: 2px solid #C3343C;
+    
+    }
+
+   
+}
