--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -42,11 +42,10 @@ p{
         font-size: 16px;
     }
 }
-
 .home{
     .banner{
         background-color: #E2E2E2;
-        background-image: url('/assets/images/homebg.png');
+        // background-image: url('/assets/images/homebg.png');
         background-position: bottom;
         background-size: 100%;
         background-repeat: no-repeat;
@@ -128,7 +127,9 @@ background-color: #FFFFFF;
         .button{
             padding-top: 40px;
         }
-        .icon{
+        .icon
+        
+        {
             text-align: center;
             padding: 120px 0 40px 0;
             .icon1{
@@ -150,6 +151,9 @@ background-color: #FFFFFF;
                 padding: 0 0 0 0;
             }
         }
+
+     
+
         @include media-breakpoint-down(lg){
             .row{
                 .col-md-2{
@@ -520,6 +524,11 @@ background-color: #FFFFFF;
         margin-top: 0 !important;
     }
 }
+.animations{
+    margin-top: -303px;
+margin-left: 120px;
+}
+
 ::ng-deep .tile{
     border-radius: 15px;
     box-shadow: none !important;
@@ -533,11 +542,26 @@ background-color: #FFFFFF;
     padding: 10px 20px;
     font-family: 'Muli', sans-serif;
     margin-top: 30px;
-    &:hover{
-        background-color: #C3343C;
-        color: #FFFFFF;
-        border: 2px solid #FFFFFF;
-    }
+    position: relative;
+}
+.btn::before{
+    content: "";
+    position: absolute;
+    background-color: blueviolet;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    transform: translateX(100%);
+    transition: all 2s;
+    color: black;
+
+}
+.btn:hover{
+    background-color: #C3343C;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
 }
 .btnn{
     border: 2px solid #0D0D0D;
@@ -584,3 +608,197 @@ background-color: #FFFFFF;
          padding: 0px 0px 0px 30px;
         }
      }
+.btn-size{
+    width: 190px;
+}
+
+
+
+// *********************** BUTTONS red ***************
+.anime-button{
+    display: flex;
+
+    a{
+        border: 2px solid #0D0D0D;
+        border-radius: 0;
+        color: #0D0D0D;
+        cursor: pointer;
+        font-size: 20px;
+        padding: 10px 20px;
+        font-family: "Muli", sans-serif;
+        margin-top: 30px;
+        position: relative;
+        transition:all 1.5s;
+        z-index: 1;
+        text-decoration: none;
+        overflow:hidden;
+    }
+    a::before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
+        background-color: #C3343C;
+        transition:all 1.5s;
+        transform: translateX(-100%);
+        z-index: -1;
+        overflow:hidden;
+       
+    
+    }
+    a:hover:before{
+        transform: translateX(0);
+    }
+    a:hover{
+        color: #fff;
+        border: 2px solid #C3343C;
+    
+    }
+
+   
+}
+// *********************** BUTTONS white ***************
+.anime-button-white{
+    display: flex;
+    
+
+    a{
+        border: 2px solid #ffffff;
+        border-radius: 0;
+        color: #ffffff;
+        cursor: pointer;
+        font-size: 20px;
+        padding: 10px 20px;
+        font-family: "Muli", sans-serif;
+        margin-top: 30px;
+        position: relative;
+        transition:all 1.5s;
+        z-index: 1;
+        text-decoration: none;
+        overflow:hidden;
+    }
+    a::before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
+        background-color: #ffffff;
+        transition:all 1.5s;
+        transform: translateX(-100%);
+        z-index: -1;
+        overflow:hidden;
+       
+    
+    }
+    a:hover:before{
+        transform: translateX(0);
+    }
+    a:hover{
+        color:#C3343C;
+    
+    }
+  }
+.lets-talk{
+    height: 80px;
+    margin-top: 42px;
+}
+// *********************** drop-shadow ***************
+
+.services-shadow:hover{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: all 0.5s;
+    .arrow-anime{
+        transform: translateX(0);
+     }
+    
+
+}
+.services-shadow{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;}
+// *********************** arrow-effect ***************
+
+    .arrow-anime{
+       transform: translateX(-100%);
+       transition: 0.5s;
+    }
+
+
+    // *********************** scroll -effect ***************
+
+    .slider-content{
+        background-color: #E2E2E2;
+        display: flex;
+        scroll-behavior: smooth;
+        padding-left: 85px;
+    }
+    .body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+   .marquee{
+       background-color: #0D0D0D;
+       color: tomato;
+    //    width: 1070px;
+    //    height: 90px;
+    //    overflow: hidden;
+   }
+   .marquee-content{
+       display: flex;
+       list-style: none;
+       height: 100%;
+    //    animation: scrolling 300s linear infinite;
+       
+       
+       
+       @keyframes scrolling{
+           00%{transform:translateX(0%)}
+           100%{transform:translateX(-80%)}
+           
+       }
+
+   }
+   .marquee-content li{
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       border: 3px solid blue;
+       width: 100px;
+       flex-shrink: 0;
+       font-size: 20px;
+
+       
+
+       .custom-slider-main{ animation:10s linear infinite;
+       
+       
+       
+        @keyframes scrolling{
+            00%{transform:translateX(0%)}
+            100%{transform:translateX(-170%)}
+            
+        }
+
+    }
+   }
+
+//    ***********************  Blog Animation ******************
+
+   .img-anime:hover{
+    transform: scale(1.08);
+    transition: 0.5s;
+    
+
+   }
+
+
+
+
+
+
+
+  
