--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -341,3 +341,51 @@
 .nav-pills a{
     color: #282829;
 }
+
+// *********************** BUTTONS white ***************
+.anime-button-blue{
+    display: flex;
+    
+
+    a{
+        border: 2px solid #ffffff;
+        border-radius: 0;
+        color: #ffffff;
+        cursor: pointer;
+        font-size: 20px;
+        padding: 10px 20px;
+        font-family: "Muli", sans-serif;
+        margin-top: 30px;
+        position: relative;
+        transition:all 1.5s;
+        z-index: 1;
+        text-decoration: none;
+        overflow:hidden;
+    }
+    a::before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
+        background-color: #ffffff;
+        transition:all 1.5s;
+        transform: translateX(-100%);
+        z-index: -1;
+        overflow:hidden;
+       
+    
+    }
+    a:hover:before{
+        transform: translateX(0);
+    }
+    a:hover{
+        color:#007bff;
+    
+    }
+  }
+.lets-talk{
+    height: 80px;
+    margin-top: 42px;
+}
