--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -41,7 +41,9 @@
                            <br>Transformation 
                            <br>for Telcom </h2>
                         <p>UX . UI . Mobile . B2B</p>
-                        <div class="btn outline-btn" routerLink="/work/networking">Case Study</div>
+                        <div class="anime-button">
+                           <a   routerLink="/work/networking">Case Study</a>
+                        </div>                     
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
@@ -66,7 +68,9 @@
                            <h2>Event Hosting 
                             <br>made stressless</h2>
                            <p>UX . UI . Web . Mobile . B2C</p>
-                           <div class="btn outline-btn" routerLink="/work/event-management">Case Study</div>
+                           <div class="anime-button">
+                              <a   routerLink="/work/event-management">Case Study</a>
+                           </div>  
                         </div>
                      </div>
                   </div>
@@ -83,7 +87,10 @@
                            organic food
                            as a Lifestyle</h2>
                         <p>UX . UI . web . Mobile .B2C</p>
-                        <div class="btn outline-btn" routerLink="/work/health-care">Case Study</div>
+                           <div class="anime-button">
+                           <a   routerLink="/work/health-care">Case Study</a>
+                        </div>  
+                        
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
@@ -108,7 +115,9 @@
                         <div class="right-content">
                            <h2>Website for Startup</h2>
                            <p>UX . UI . B2C</p>
-                           <div class="btn outline-btn" routerLink="/work/uxahead">Case Study</div>
+                           <div class="anime-button">
+                              <a   routerLink="/work/uxahead">Case Study</a>
+                           </div>  
                         </div>
                      </div>
                   </div>
@@ -123,7 +132,9 @@
                      <div class="left-content">
                         <h2>A designers platform for creative upskill</h2>
                         <p>UX . UI . Mobile . Web . B2C</p>
-                        <div class="btn outline-btn" routerLink="/work/skill-development">Case Study</div>
+                        <div class="anime-button">
+                           <a   routerLink="/work/skill-development">Case Study</a>
+                        </div>
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
@@ -147,7 +158,9 @@
                         <div class="right-content">
                            <h2>Child Care Portal</h2>
                            <p>UX . UI . Mobile . Web . B2C</p>
-                           <div class="btn outline-btn" routerLink="/work/childcare-portal">Case Study</div>
+                           <div class="anime-button">
+                              <a   routerLink="/work/childcare-portal">Case Study</a>
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -162,7 +175,9 @@
                      <div class="left-content">
                         <h2>A Customer Advocacy Platform </h2>
                         <p>UX . UI . Web . B2B2C</p>
-                        <div class="btn outline-btn" routerLink="/work/marketing">Case Study</div>
+                        <div class="anime-button">
+                           <a   routerLink="/work/marketing">Case Study</a>
+                        </div>
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
@@ -187,7 +202,9 @@
                            <h2>Automobile Usability
                               Testing</h2>
                            <p>UUX . UI . Web .Mobile . B2C</p>
-                           <div class="btn outline-btn" routerLink="/work/automobile-usability">Case Study</div>
+                           <div class="anime-button">
+                              <a   routerLink="/work/automobile-usability">Case Study</a>
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -202,7 +219,9 @@
                      <div class="left-content">
                         <h2>Repository of Accomplishments</h2>
                         <p>UX . UI . Web . B2C</p>
-                        <div class="btn outline-btn" routerLink="/work/construction-portal">Case Study</div>
+                        <div class="anime-button">
+                           <a   routerLink="/work/construction-portal">Case Study</a>
+                        </div>
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
