--- a/src/styles.scss
+++ b/src/styles.scss
@@ -144,3 +144,146 @@ app-root{
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+// *********************** BUTTONS red ***************
+.anime-button{
+    display: flex;
+
+    a{
+        border: 2px solid #0D0D0D;
+        border-radius: 0;
+        color: #0D0D0D;
+        cursor: pointer;
+        font-size: 20px;
+        padding: 10px 20px;
+        font-family: "Muli", sans-serif;
+        margin-top: 30px;
+        position: relative;
+        transition:all 1.5s;
+        z-index: 1;
+        text-decoration: none;
+        overflow:hidden;
+    }
+    a::before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
+        background-color: #C3343C;
+        transition:all 1.5s;
+        transform: translateX(-100%);
+        z-index: -1;
+        overflow:hidden;
+       
+    
+    }
+    a:hover:before{
+        transform: translateX(0);
+    }
+    a:hover{
+        color: #fff;
+        border: 2px solid #C3343C;
+    
+    }
+
+   
+}
+// *********************** BUTTONS white ***************
+.anime-button-white{
+    display: flex;
+    
+
+    a{
+        border: 2px solid #ffffff;
+        border-radius: 0;
+        color: #ffffff;
+        cursor: pointer;
+        font-size: 20px;
+        padding: 10px 20px;
+        font-family: "Muli", sans-serif;
+        margin-top: 30px;
+        position: relative;
+        transition:all 1.5s;
+        z-index: 1;
+        text-decoration: none;
+        overflow:hidden;
+    }
+    a::before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
+        background-color: #ffffff;
+        transition:all 1.5s;
+        transform: translateX(-100%);
+        z-index: -1;
+        overflow:hidden;
+       
+    
+    }
+    a:hover:before{
+        transform: translateX(0);
+    }
+    a:hover{
+        color:#C3343C;
+    
+    }
+  }
+.lets-talk{
+    height: 80px;
+    margin-top: 42px;
+}
+
+
+// *********************** BUTTONS white ***************
+.anime-button-white{
+    display: flex;
+    
+
+    a{
+        border: 2px solid #ffffff;
+        border-radius: 0;
+        color: #ffffff;
+        cursor: pointer;
+        font-size: 20px;
+        padding: 10px 20px;
+        font-family: "Muli", sans-serif;
+        margin-top: 30px;
+        position: relative;
+        transition:all 1.5s;
+        z-index: 1;
+        text-decoration: none;
+        overflow:hidden;
+    }
+    a::before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
+        background-color: #ffffff;
+        transition:all 1.5s;
+        transform: translateX(-100%);
+        z-index: -1;
+        overflow:hidden;
+       
+    
+    }
+    a:hover:before{
+        transform: translateX(0);
+    }
+    a:hover{
+        color:#C3343C;
+    
+    }
+  }
+.lets-talk{
+    height: 80px;
+    margin-top: 42px;
+}
