--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,8 +2,16 @@
    <div class="banner">
       <div class="container">
          <div class="contact-layout">
-            <h1>We are eager to <span> get in touch </span><br> with you as well </h1>
-            <h6>you can drop us an email at <span> <a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h6>
+            <div class="row">
+               <div class="col-md-6 contact-left">
+                  <h1>We are eager to <span> get in touch </span> with you as well </h1>
+                  <h6>you can drop us an email at <span> <a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h6>
+               </div>
+               <div class="col-md-6 only-web">
+                  <img src="/assets/images/contactUs.png">
+               </div>
+            </div>
+           
          </div>
       </div>
    </div>
